# finance_tracker_g1_app

./: README.md  app.py  pyproject.toml
test_file/: test_santander_statement.xlsx
