[project]
name = "finance-tracker-g1-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "finance-tracker-g1>=0.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]

[[tool.uv.index]]
url = "https://test.pypi.org/simple"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
